k8s-configs/ping-cloud/base/pingaccess-was/ff-external-ingress/external-ingress.yaml
# This defines the external ingress for the pingaccess-was admin service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingaccess-was-admin-ext-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - ext-pingaccess-was-admin.ping-demo.com
  rules:
  - host: ext-pingaccess-was-admin.ping-demo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pingaccess-was-admin
            port:
              number: 9000
